Fixed lltk on mobile

--- a/index.css
+++ b/index.css
@@ -196,6 +196,13 @@ article {
     border-radius: 5px;
     text-shadow: rgb(var(--bg-color)) 2px 1px 2px;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+article h2 {
+    max-width: 75%;
 }
 
 .summary {
